@@ -2,6 +2,8 @@ Version 1.0.2
 ~~~~~~~~~~~~~
 * Add support for VLBN "format" -- that is VLBA with no data modulation
 * Improved printing in corrparams, added tolerance for clock date detection
+* Treat warnings as errors; use --force to override
+* Fix some compiler warnings
 * This is the version for DiFX-1.5.2
 
 Version 1.0.1
